--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@
 <!-- status: title-mode | logo-mode -->
 <header class="store-header" data-status="logo-mode" id="topbar">
 	<div>
-		<button class="menu-button" title="Menu"><i></i></button>
+		<button class="menu-button" id="menubutton" title="Menu"><i></i></button>
 		<h1>Nome da loja</h1>
 		<figure class="logo">
 			<a href="#" title="Thrift">
