--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -17,7 +17,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="temas">
-			<li class="title">Temas</li>
+			<li class="title"><small>Temas</small></li>
 			<li><a href="" title=""><u>Ciência</u></a></li>
 			<li><a href="" title=""><u>Vintage</u></a></li>
 			<li><a href="" title=""><u>Natureza</u></a></li>
@@ -30,7 +30,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="vestuario">
-			<li class="title">Vestuário</li>
+			<li class="title"><small>Vestuário</small></li>
 			<li data-id="vestuario-masculino"><a href="" title=""><u>Masculino</u></a><data>12</data></li>
 			<li data-id="vestuario-feminino"><a href="" title=""><u>Feminino</u></a><data>12</data></li>
 			<li data-id="vestuario-unissex"><a href="" title=""><u>Unissex</u></a><data>11</data></li>
@@ -38,13 +38,13 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="chapeus">
-			<li class="title">Chapéus</li>
+			<li class="title"><small>Chapéus</small></li>
 			<li data-id="chapeus-silkados"><a href="" title=""><u>Silkados</u></a><data>2</data></li>
 			<li data-id="chapeus-bordados"><a href="" title=""><u>Bordados</u></a><data>3</data></li>
 		</ul>
 
 		<ul class="submenu" data-parent="acessorios">
-			<li class="title">Acessórios</li>
+			<li class="title"><small>Acessórios</small></li>
 			<li data-id="acessorios-bags"><a href="" title=""><u>Bags</u></a><data>7</data></li>
 			<li data-id="acessorios-bebidas"><a href="" title=""><u>Bebidas</u></a><data>4</data></li>
 			<li data-id="acessorios-lifestyle"><a href="" title=""><u>Lifestyle</u></a><data>9</data></li>
@@ -52,14 +52,14 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="posteres">
-			<li class="title">Pôsteres</li>
+			<li class="title"><small>Pôsteres</small></li>
 			<li data-id="posteres-impressos"><a href="" title=""><u>Impressos</u></a><data>8</data></li>
 			<li data-id="posteres-skateboards"><a href="" title=""><u>Skateboards</u></a><data>5</data></li>
 			<li data-id="posteres-temas"><a href="" title=""><u>Temas</u></a><data>5</data></li>
 		</ul>
 
 		<ul class="submenu" data-parent="decoracao">
-			<li class="title">Decoração</li>
+			<li class="title"><small>Decoração</small></li>
 			<li data-id="decoracao-quarto"><a href="" title=""><u>Quarto</u></a><data>3</data></li>
 			<li data-id="decoracao-living"><a href="" title=""><u>Living</u></a><data>6</data></li>
 			<li data-id="decoracao-banheiro"><a href="" title=""><u>Banheiro</u></a><data>3</data></li>
@@ -67,7 +67,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="vestuario-masculino">
-			<li class="title">Masculino</li>
+			<li class="title"><small>Masculino</small></li>
 			<li><a href="" title=""><u>Novos designs</u></a></li>
 			<li data-id="vestuario-masculino-camisetas"><a href="" title=""><u>Camisetas</u></a><data>3</data></li>
 			<li><a href="" title=""><u>Gola V</u></a></li>
@@ -83,7 +83,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="vestuario-feminino">
-			<li class="title">Feminino</li>
+			<li class="title"><small>Feminino</small></li>
 			<li><a href="" title=""><u>Novos designs</u></a></li>
 			<li><a href="" title=""><u>Camisetas</u></a></li>
 			<li><a href="" title=""><u>Gola V</u></a></li>
@@ -99,7 +99,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="vestuario-unissex">
-			<li class="title">Unissex</li>
+			<li class="title"><small>Unissex</small></li>
 			<li><a href="" title=""><u>Novos designs</u></a></li>
 			<li><a href="" title=""><u>Camisetas</u></a></li>
 			<li><a href="" title=""><u>Confort colors</u></a></li>
@@ -114,7 +114,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="vestuario-infantil-bebes">
-			<li class="title">Infantil & Bebês</li>
+			<li class="title"><small>Infantil & Bebês</small></li>
 			<li><a href="" title=""><u>Novos designs</u></a></li>
 			<li><a href="" title=""><u>Camisetas</u></a></li>
 			<li><a href="" title=""><u>Manga longa</u></a></li>
@@ -124,20 +124,20 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="chapeus-silkados">
-			<li class="title">Silkados</li>
+			<li class="title"><small>Silkados</small></li>
 			<li><a href="" title=""><u>Chapéus de caminhoneiro</u></a></li>
 			<li><a href="" title=""><u>Bonés de baseball</u></a></li>
 		</ul>
 
 		<ul class="submenu" data-parent="chapeus-bordados">
-			<li class="title">Bordados</li>
+			<li class="title"><small>Bordados</small></li>
 			<li><a href="" title=""><u>Com botoeira</u></a></li>
 			<li><a href="" title=""><u>Gorros</u></a></li>
 			<li><a href="" title=""><u>Gorros com dobra</u></a></li>
 		</ul>
 
 		<ul class="submenu" data-parent="acessorios-bags">
-			<li class="title">bags</li>
+			<li class="title"><small>bags</small></li>
 			<li><a href="" title=""><u>Com faixa</u></a></li>
 			<li><a href="" title=""><u>Com ziper</u></a></li>
 			<li><a href="" title=""><u>Com alças</u></a></li>
@@ -148,7 +148,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="acessorios-bebidas">
-			<li class="title">Bebidas</li>
+			<li class="title"><small>Bebidas</small></li>
 			<li><a href="" title=""><u>Canecas brancas</u></a></li>
 			<li><a href="" title=""><u>Canecas pretas</u></a></li>
 			<li><a href="" title=""><u>Canecas cone</u></a></li>
@@ -156,7 +156,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="acessorios-lifestyle">
-			<li class="title">Lifestyle</li>
+			<li class="title"><small>Lifestyle</small></li>
 			<li><a href="" title=""><u>Bonés</u></a></li>
 			<li><a href="" title=""><u>Lenços</u></a></li>
 			<li><a href="" title=""><u>Adesivos</u></a></li>
@@ -169,7 +169,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="acessorios-escritorio">
-			<li class="title">Escritório</li>
+			<li class="title"><small>Escritório</small></li>
 			<li><a href="" title=""><u>Mouse pad</u></a></li>
 			<li><a href="" title=""><u>Tapetes de mesa</u></a></li>
 			<li><a href="" title=""><u>Cartão de visita</u></a></li>
@@ -179,7 +179,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="posteres-impressos">
-			<li class="title">Impressos</li>
+			<li class="title"><small>Impressos</small></li>
 			<li><a href="" title=""><u>Pôster de arte</u></a></li>
 			<li><a href="" title=""><u>Emoldurados</u></a></li>
 			<li><a href="" title=""><u>Minis de arte</u></a></li>
@@ -191,7 +191,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="posteres-skateboards">
-			<li class="title">Skateboards</li>
+			<li class="title"><small>Skateboards</small></li>
 			<li><a href="" title=""><u>Shapes</u></a></li>
 			<li><a href="" title=""><u>Shapes com suporte</u></a></li>
 			<li><a href="" title=""><u>Básicos</u></a></li>
@@ -200,7 +200,7 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="posteres-temas">
-			<li class="title">Temas</li>
+			<li class="title"><small>Temas</small></li>
 			<li><a href="" title=""><u>Surreal</u></a></li>
 			<li><a href="" title=""><u>Landscape</u></a></li>
 			<li><a href="" title=""><u>Arte gráfica</u></a></li>
@@ -209,14 +209,14 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="decoracao-quarto">
-			<li class="title">Quarto</li>
+			<li class="title"><small>Quarto</small></li>
 			<li><a href="" title=""><u>Capas de edredom</u></a></li>
 			<li><a href="" title=""><u>Cobertores</u></a></li>
 			<li><a href="" title=""><u>Cestas</u></a></li>
 		</ul>
 
 		<ul class="submenu" data-parent="decoracao-living">
-			<li class="title">Living</li>
+			<li class="title"><small>Living</small></li>
 			<li><a href="" title=""><u>Pinturas de parede</u></a></li>
 			<li><a href="" title=""><u>Tapetes de parede</u></a></li>
 			<li><a href="" title=""><u>Almofadas</u></a></li>
@@ -226,27 +226,27 @@ const { menuBanner } = Astro.props;
 		</ul>
 
 		<ul class="submenu" data-parent="decoracao-banheiro">
-			<li class="title">Banheiro</li>
+			<li class="title"><small>Banheiro</small></li>
 			<li><a href="" title=""><u>Tapetes de piso</u></a></li>
 			<li><a href="" title=""><u>Cortinas de box</u></a></li>
 			<li><a href="" title=""><u>Toalhas</u></a></li>
 		</ul>
 
 		<ul class="submenu" data-parent="decoracao-cozinha">
-			<li class="title">Cozinha</li>
+			<li class="title"><small>Cozinha</small></li>
 			<li><a href="" title=""><u>Utensílios de bebida</u></a></li>
 			<li><a href="" title=""><u>Imãs</u></a></li>
 		</ul>
 
 		<ul class="submenu" data-parent="vestuario-masculino-camisetas">
-			<li class="title">Camisetas</li>
+			<li class="title"><small>Camisetas</small></li>
 			<li><a href="" title=""><u>Sub 1</u></a></li>
 			<li data-id="vestuario-masculino-camisetas-sub2"><a href="" title=""><u>Sub 2</u></a><data>3</data></li>
 			<li><a href="" title=""><u>Sub 3</u></a></li>
 		</ul>
 
 		<ul class="submenu" data-parent="vestuario-masculino-camisetas-sub2">
-			<li class="title">Sub 2</li>
+			<li class="title"><small>Sub</small> 2</li>
 			<li><a href="" title=""><u>Sub 1</u></a></li>
 			<li><a href="" title=""><u>Sub 2</u></a></li>
 			<li><a href="" title=""><u>Sub 3</u></a></li>
