--- a/src/styles/_menu.sass
+++ b/src/styles/_menu.sass
@@ -110,7 +110,14 @@
 
 		&.title
 			border-bottom: none
-			font-size: .8rem
+			padding-left: 0
+			small
+				font-size: .8rem
+				font-weight: 400
+				line-height: 1.25rem
+				padding: 0 .75rem
+				border: solid 1px rgba(lightgrey, .3)
+				border-radius: .25rem
 
 		data
 			width: 1.25rem
@@ -201,10 +208,12 @@
 
 @include base.for-size(phone)
 	.store-menu
+		height: 60vh
 		li
 			font-size: 5vw
-			&.title
-				font-size: 3vw
+			&.title small
+				font-size: 3.5vw
+				line-height: 5vw
 			data
 				font-size: 4vw
 
