--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ import Placard from '../components/Placard.astro';
 	<!-- Showcase de produtos -->
 	<section class="showcase">
 		<hgroup>
-			<a href="#" title="Masculino - Manga longa">
+			<a href={`${import.meta.env.BASE_URL}/vestuario/masculino/manga-longa`} title="Masculino - Manga longa">
 				<h2>Masculino - Manga longa</h2>
 				<i></i>
 			</a>
