--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -24,6 +24,12 @@ img
 	display: block
 em
 	font-style: normal
+button
+	background-color: transparent
+	cursor: pointer
+	border: none
+	color: var(--text-color)
+
 
 // selection
 ::selection
