--- a/src/components/ProductDetails.astro
+++ b/src/components/ProductDetails.astro
@@ -6,29 +6,41 @@ const { title, sub1, sub2, price, delPrice, installmentsNumber, installmentsValu
 
 		<aside>
 			<!-- Img gallery -->
-			<div class="img-gallery">
+			<div class="img-gallery" id="img-gallery">
 				<ul>
 					<li><img src="/template-ecommerce-vega/img/products/button1.png" alt="" /></li>
 					<li><img src="/template-ecommerce-vega/img/products/button2.jpg" alt="" /></li>
 					<li><img src="/template-ecommerce-vega/img/products/button3.jpg" alt="" /></li>
 					<li><img src="/template-ecommerce-vega/img/products/button4.jpg" alt="" /></li>
 				</ul>
-				<button class="gallery-expand-bt" title="Expandir"><i></i></button>
+				<button class="gallery-bt" id="gallery-bt" title="Expandir"><i></i></button>
 			</div>
 			<!-- Accordions -->
 			<dl>
 				<!-- Item -->
-				<dt>Detalhes do produto<i></i></dt>
-				<dd>...</dd>
+				<dt class="accordion-title">Detalhes do produto<i></i></dt>
+				<dd>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</dd>
 				<!-- Item -->
-				<dt>Caracteríscticas<i></i></dt>
-				<dd>...</dd>
+				<dt class="accordion-title">Caracteríscticas<i></i></dt>
+				<dd>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</dd>
 				<!-- Item -->
-				<dt>Cuidados com a peça<i></i></dt>
-				<dd>...</dd>
+				<dt class="accordion-title">Cuidados com a peça<i></i></dt>
+				<dd>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</dd>
 				<!-- Item -->
-				<dt>Avaliações<i></i></dt>
-				<dd>...</dd>
+				<dt class="accordion-title">Avaliações<i></i></dt>
+				<dd>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</dd>
 			</dl>
 		</aside>
 
