--- a/src/styles/_menu.sass
+++ b/src/styles/_menu.sass
@@ -19,6 +19,7 @@
 	gap: .75rem
 	transition: top .1s
 	box-shadow: 0 .25rem .25rem rgba(black, 20%)
+	border-top: .4rem solid $theme
 
 	&.active
 		display: flex
@@ -27,14 +28,14 @@
 		top: 3.5rem
 		transition: top 1.5s $ease
 
-	&::before
-		content: ''
-		width: 100%
-		height: .3rem
-		background-color: $theme
-		position: absolute
-		top: 0
-		left: 0
+	// &::before
+	// 	content: ''
+	// 	width: 100%
+	// 	height: .3rem
+	// 	background-color: $theme
+	// 	position: absolute
+	// 	top: 0
+	// 	left: 0
 
 
 	nav
@@ -112,11 +113,11 @@
 			border-bottom: none
 			padding-left: 0
 			small
-				font-size: .8rem
+				font-size: 1rem
 				font-weight: 400
 				line-height: 1.25rem
 				padding: 0 .75rem
-				border: solid 1px rgba(lightgrey, .3)
+				border: solid 1px rgba(lightgrey, .5)
 				border-radius: .25rem
 
 		data
@@ -186,6 +187,7 @@
 		bottom: 0
 		max-height: initial
 		height: 50vh
+		border-radius: 2rem 2rem 0 0
 
 		nav
 			max-height: initial
