--- a/src/styles/_product-details.sass
+++ b/src/styles/_product-details.sass
@@ -54,6 +54,13 @@
 			width: 100%
 			position: relative
 
+			&.expanded
+				ul
+					transition: max-height 1.5s $ease
+					max-height: 9999px
+				.gallery-bt i
+					transform: rotate(-90deg)
+
 			ul
 				width: 100%
 				background-color: var(--bg-lightgrey)
@@ -64,6 +71,7 @@
 				border-radius: .75rem
 				overflow: hidden
 				max-height: 25rem
+				transition: max-height .1s
 
 				li
 					flex: 1 1 49%
@@ -99,7 +107,7 @@
 					cursor: pointer
 
 
-			.gallery-expand-bt
+			.gallery-bt
 				width: 3.5rem
 				height: 1.25rem
 				border-radius: 1.25rem
@@ -149,6 +157,10 @@
 				&:hover
 					opacity: .7
 
+				&.active i
+					mask-image: url("/template-ecommerce-vega/img/icons/minimize.svg")
+					transform: rotate(0deg)
+
 				i
 					flex: 0 0 1rem
 					height: 1rem
@@ -160,6 +172,16 @@
 			dd
 				max-height: 0
 				overflow: hidden
+
+				&.expanded
+					transition: max-height 1s $ease
+					max-height: 9999px
+
+				p
+					padding: .75rem
+					font-size: 1.1rem
+					line-height: 1.5rem
+					font-weight: 400
 
 
 	form
@@ -737,7 +759,7 @@
 					li
 						flex: 0 0 20vw
 						height: auto
-				.gallery-expand-bt
+				.gallery-bt
 					display: none
 			dl
 				height: auto
