--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -33,6 +33,10 @@ $ease: cubic-bezier(0.6,0,0,1)
 // max-width column
 $main_column: 80rem
 
+// shadows
+$shadow_sm: 0 .25rem .5rem rgba(0,0,0,.2)
+$shadow_md: 0 .75rem 2rem rgba(0,0,0,.2)
+
 // Triangle
 %triangle
 	content: ''
