--- a/src/components/ProductCard.astro
+++ b/src/components/ProductCard.astro
@@ -28,7 +28,7 @@ const { href, src, title, alt, price, installmentsNumber, installmentsValue, ord
 			</span>
 		</div>
 		<footer>
-			<button title="Compre agora" class="open-product-details">Compre agora</button>
+			<button title="Compre agora" class="open-product-details">Mais detalhes</button>
 			<button class="add-to-cart" title="Adicionar"><i></i><i></i></button>
 		</footer>
 	</div>
