--- a/src/styles/_product-details.sass
+++ b/src/styles/_product-details.sass
@@ -451,20 +451,17 @@
 				flex: 1
 				height: 3rem
 				box-sizing: border-box
-				border: solid 2px rgba(grey, .5)
+				border: solid 1px rgba(grey, .5)
 				border-radius: .5rem
-				background-color: var(--neutral_0)
+				background-color: $theme//var(--neutral_0)
 				font-size: 0.875rem
 				font-weight: 800
 				text-transform: uppercase
 				cursor: pointer
-				color: var(--text-color)
-				// transition: border-color .2s $ease
+				color: var(--contrast)
 
 				&:hover
-					// background-color: rgba(grey, 10%)
-					border-color: $theme
-					transform: scale(1.05)
+					opacity: .9
 
 			.add-to-cart
 				flex: 0 0 5.5rem
@@ -474,7 +471,7 @@
 
 				i
 					mask-size: contain
-					background-color: var(--text-color)
+					background-color: var(--contrast)
 				i:first-of-type
 					flex: 0 0 1.5rem
 					height: 1.5rem
